--- a/css/styles.css
+++ b/css/styles.css
@@ -593,8 +593,12 @@ p {
     align-items: baseline;
 }
 
-.container > div:first-child {
+.container > div:nth-child(1) {
     margin-right: 70px;
+}
+
+.container > div:nth-child(2) {
+    margin-right: 93px;
 }
 
 .logo-footer {
@@ -696,6 +700,38 @@ p {
 
 .footer-icon{
     fill: var(--main-back-color);
+}
+
+.contact-us-title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--main-back-color);
+    margin-bottom: 20px;
+}
+
+.contact-mail {
+    box-sizing: border-box;
+    background-color: inherit;
+    width: 358px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    padding: 15px 16px;
+}
+
+.contact-btn {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+
+color: #FFFFFF;
 }
 
 .modal-backdrop {
