--- a/css/styles.css
+++ b/css/styles.css
@@ -106,27 +106,35 @@ p {
 
 
 .header-link {
+    position: relative;
     box-sizing: border-box;
     display: inline-block;
     text-decoration: none;
     color: var(--header-link-color);
     padding-top: 32px;
     padding-bottom: 32px;
+    transition-property: background-color, color, box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link:focus,
 .header-link:hover,
-.selected:hover::after,
-.selected:focus::after,
 .selected {
     color: var(--logo-leading-color);
     cursor: pointer;
+}
+
+.selected::after {
     content:'';
-    display: flex;
-    border-bottom: 3px solid;
+    position: absolute;
+    background-color: #2196F3;
+    width: 100%;
+    height: 3px;
+    bottom: 0;
+    left: 0;
     border-radius: 2px;
+    bottom: -2px;
 }
 
 .header-nav-block {
@@ -155,6 +163,7 @@ p {
     color: var(--main-color);
     padding-top: 32px;
     padding-bottom: 32px;
+    transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -175,6 +184,7 @@ p {
     color: var(--main-color);
     padding-top: 32px;
     padding-bottom: 32px;
+    transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -204,7 +214,6 @@ p {
     margin: -1px;
     border: 0;
     padding: 0;
-    
     white-space: nowrap;
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
@@ -232,6 +241,7 @@ p {
     letter-spacing: 0.03em;
     color: var(--header-link-color);
     cursor: pointer;
+    transition-property: background-color, color, box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -258,10 +268,15 @@ p {
     display: block;
     text-decoration: none;
     transition-property: transform;
-    position: relative;
     background: var(--main-back-color);
+    transition-property: box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.port-link > div:nth-child(1) {
+    position: relative;
+    overflow: hidden;
 }
 
 .port-link:hover,
@@ -278,8 +293,6 @@ p {
     border-right: 1px solid #EEEEEE;
     border-bottom: 1px solid #EEEEEE;
 }
-
-
 
 .port-title {
     font-weight: 700;
@@ -299,7 +312,6 @@ p {
 
 .main-section-1 {
     max-width: 1600px;
-    height: 600px;
     margin-left: auto;
     margin-right: auto;
     padding-top: 200px;
@@ -340,6 +352,7 @@ p {
     text-align: center;
     border-color: transparent;
     padding: 10px 32px;
+    transition-property: background-color, color, box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -509,6 +522,7 @@ p {
     width: 100%;
     height: 100%;
     border-radius: 50%;
+    transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -520,6 +534,7 @@ p {
 
 .foto-icon{
     fill: var(--border-link);
+    transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -562,6 +577,7 @@ p {
     height: 92px;
     border: 1px solid var(--border-link);
     border-radius: 4px;
+    transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -573,6 +589,7 @@ p {
 
 .section-icon {
     fill: var(--border-link);
+    transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -633,6 +650,7 @@ p {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--main-back-color);
+    transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -646,6 +664,7 @@ p {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--footer-shadow);
+    transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -689,6 +708,7 @@ p {
     width: 100%;
     height: 100%;
     border-radius: 50%;
+    transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -702,6 +722,10 @@ p {
     fill: var(--main-back-color);
 }
 
+.contact-us {
+    display: inline-block;
+}
+
 .contact-us-title {
     font-weight: 700;
     font-size: 14px;
@@ -712,8 +736,12 @@ p {
     margin-bottom: 20px;
 }
 
+.contact-us-email{
+    display: flex;
+    gap: 12px;
+}
+
 .contact-mail {
-    box-sizing: border-box;
     background-color: inherit;
     width: 358px;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -723,15 +751,22 @@ p {
 }
 
 .contact-btn {
+    display: flex;
+    align-items: center;
     font-weight: 700;
     font-size: 16px;
     line-height: 30px;
-    display: flex;
-    align-items: center;
-    text-align: center;
     letter-spacing: 0.06em;
+    color: var(--main-back-color);
+    background-color: var(--logo-leading-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    padding: 10px 28px;
+}
 
-color: #FFFFFF;
+.contact-btn:hover,
+.contact-btn:focus {
+    cursor: pointer;
 }
 
 .modal-backdrop {
@@ -775,10 +810,6 @@ color: #FFFFFF;
 
 .modal-close:hover,
 .modal-close:focus {
-    border-color: rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
-    0px 1px 1px rgba(0, 0, 0, 0.14), 
-    0px 2px 1px rgba(0, 0, 0, 0.2);
     cursor: pointer;
 }
 
@@ -788,23 +819,20 @@ color: #FFFFFF;
 }
 
   .port-link:hover .text {
-    position: absolute;
-    height: 294px;
-    transform: translate(0, -100%);
-    padding: 63px 24px;
+    transform: translatey(-100%);
+    
 }
   
   .text {
     position: absolute;
-    overflow: hidden;
     width: 100%;
-    height: 0;
     font-weight: 400;
     font-size: 18px;
     line-height: 1.56;
     color: var(--main-back-color);
     letter-spacing: 0.03em;
     text-align: start;
+    padding: 64px 32px;
     background-color: rgba(33, 150, 243, 0.9);
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
