--- a/css/styles.css
+++ b/css/styles.css
@@ -426,6 +426,28 @@ p {
     padding: 0;
 }
 
+.main-img-list > li {
+    position: relative;
+}
+
+.image-block {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 24%;
+    background-color: rgba(47, 48, 58, 0.8);
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--main-back-color);
+    padding-top: 27px;
+}
+
 .main-section-3 {
     padding-bottom: 94px;
 
@@ -884,41 +906,50 @@ p {
     align-items: center;
 }
 
-.check-box > a {
+.wtf{
+    position: absolute; 
+    white-space: nowrap; 
+    width: 1px; 
+    height: 1px; 
+    overflow: hidden; 
+    border: 0; 
+    padding: 0; 
+    clip: rect(0 0 0 0); 
+    clip-path: inset(50%); 
+    margin: -1px;
+}
+
+.check-span {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
-    letter-spacing: 0.03em;
+}
+
+.check-span > a {
     color: var(--logo-leading-color);
-}
-
-.wtf {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-}
-
-.check-box:hover input ~ wtf {
-    cursor: pointer;
+    text-decoration: underline;
 }
 
 .check-one {
     position: relative;
-    top: 0;
-    left: 8px;
     height: 15px;
     width: 16px;
-    fill: var(--header-link-color);
-  }
+    fill: var(--main-back-color);
+    border: 2px solid var(--header-link-color);
+    border-radius: 4px;
+    padding: 0%;
+    margin-right: 7px;
+    cursor: pointer;
+  /*transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  border 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
+}
 
-.check-two {
-    position: relative;
-    top: 0;
-    left: -8px;
-    height: 15px;
-    width: 16px;
+
+.wtf:checked + .check-one {
+    fill: var(--logo-leading-color);
+    background-color: var(--logo-leading-color);
+    border: 0px solid transparent;
 }
 
 .modal-btn {
